More code cleanup and documentation, focused around resolving import wornings by importing specific funtions of packages (rather than the packages as a whole) throughout the package here. Now, igraph and tibble do not bicker with other packages for function name priority.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,13 +15,22 @@ export(scaleNetwork)
 export(sharedneighbors)
 export(verifyMatrix)
 import(dplyr)
-import(igraph)
 import(readxl)
-import(stats)
 import(stringr)
-import(tibble)
 import(tidyverse)
 import(utils)
+importFrom(igraph,E)
+importFrom(igraph,V)
 importFrom(igraph,as_edgelist)
+importFrom(igraph,components)
+importFrom(igraph,degree)
+importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_edgelist)
+importFrom(igraph,shortest_paths)
+importFrom(igraph,strength)
+importFrom(igraph,subgraph)
+importFrom(readxl,excel_sheets)
+importFrom(readxl,read_excel)
 importFrom(stringr,str_split)
+importFrom(tibble,column_to_rownames)
+importFrom(tibble,has_rownames)
