Reworked "edge swap" system. Still likely incomplete for complex swaps (adjacent cycles of swaps) but working for the dibamid dataset.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(cgraph)
 export(clean_isolates)
 export(componentFrequencies)
 export(excel_to_network)
+export(findCycles)
 export(findedge)
 export(graphEditDist)
 export(lizard_setup)
@@ -20,11 +21,13 @@ import(tidyverse)
 import(utils)
 importFrom(igraph,E)
 importFrom(igraph,V)
+importFrom(igraph,all_simple_paths)
 importFrom(igraph,as_edgelist)
 importFrom(igraph,components)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_edgelist)
+importFrom(igraph,neighbors)
 importFrom(igraph,shortest_paths)
 importFrom(igraph,strength)
 importFrom(igraph,subgraph)
