Updated the DibamidaeDemo flie with head/body vertices and included a quick plotting function called "pholidosis_plot"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,15 @@ export(lizard_setup)
 export(morphoMatrix)
 export(neighborlist)
 export(netDistMat)
+export(pholidosis_plot)
 export(pnet_distance)
 export(scaleNetwork)
 export(sharedneighbors)
 export(verifyMatrix)
 import(dplyr)
+import(ggraph)
 import(stringr)
+import(tidygraph)
 import(tidyverse)
 import(utils)
 importFrom(igraph,E)
@@ -25,6 +28,7 @@ importFrom(igraph,all_simple_paths)
 importFrom(igraph,as_edgelist)
 importFrom(igraph,components)
 importFrom(igraph,degree)
+importFrom(igraph,delete_vertices)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_edgelist)
 importFrom(igraph,neighbors)
