Further tweaks to help troubleshooting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(igraph,strength)
 importFrom(igraph,subgraph)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,has_rownames)
