--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,11 @@
 Package: pholidosis
-Type: Package
-Title: Scale Network Import and Analysis
-Version: 0.1.0
-Author: Isaac Krone
-Maintainer: Isaac Krone <isaacwkrone@gmail.com>
-Depends: 
-    igraph,
-    R (>= 2.10)
-Imports: tidyverse, stringr, dplyr, readxl, tibble
-Description: pholidosis works with planar biological networks with a known homology structure.
-    It is built for analysis of squamate scalation networks.
-License: GPL (>= 3)
+Title: What the Package Does (One Line, Title Case)
+Version: 0.0.0.9000
+Authors@R: 
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+Description: What the package does (one paragraph).
+License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
+    license
 Encoding: UTF-8
-LazyData: true
-URL: https://github.com/dibamus/pholidosis
-BugReports: https://github.com/dibamus/pholidosis/issues
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
