Continuing testing & cleanup:
*updated graph_edit_distance() to correctly calculate edge swaps when there is only 1 cycle in g1 + g2

*replaced scaleNetwork() with scale_network()

*replaced verifyMatrix() with verify_matrix()

*replaced morphoMatrix() with morpho_matrix()

*replaced graphEditDist() with graph_edit_distance()

*replaced netDistMat() with net_dist_mat()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,18 @@ export(component_frequencies)
 export(excel_to_network)
 export(find_cycles)
 export(find_edge)
-export(graphEditDist)
+export(graph_edit_distance)
 export(lizard_setup)
-export(morphoMatrix)
-export(netDistMat)
+export(morpho_matrix)
+export(net_dist_mat)
 export(pholidosis_plot)
 export(pnet_distance)
 export(scaleNetwork)
-export(verifyMatrix)
+export(verify_matrix)
 import(dplyr)
 import(ggplot2)
 import(ggraph)
+import(igraph)
 import(stringr)
 import(tidygraph)
 import(tidyverse)
@@ -25,14 +26,12 @@ importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
 importFrom(igraph,as_edgelist)
-importFrom(igraph,as_undirected)
 importFrom(igraph,components)
 importFrom(igraph,degree)
 importFrom(igraph,delete_vertices)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_edgelist)
 importFrom(igraph,neighbors)
-importFrom(igraph,shortest_paths)
 importFrom(igraph,strength)
 importFrom(igraph,subgraph)
 importFrom(readxl,excel_sheets)
