remove old NetDistMat, remove old scaleNetwork

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(morpho_matrix)
 export(net_dist_mat)
 export(pholidosis_plot)
 export(pnet_distance)
-export(scaleNetwork)
+export(scale_network)
 export(verify_matrix)
 import(dplyr)
 import(ggplot2)
