Reworking graph_edit_distance to explicitly find the edges surrounding problem edges rather than just removing them and finding big cycles, which failed when cycles shared edges. This approach is much more robust and doesn't involve guesswork - it actually finds all of the neighbor nodes of a set of problematic edges and tallies how large that set of edges is. Two non-exported functions what_two_triangles and get_sisteredges help it do this. These are not robust in handling bad inputs (hence not exported for the user).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(stringr)
 import(tidygraph)
 import(tidyverse)
 import(utils)
+importFrom(dplyr,"%>%")
 importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
@@ -29,6 +30,7 @@ importFrom(igraph,as_edgelist)
 importFrom(igraph,components)
 importFrom(igraph,degree)
 importFrom(igraph,delete_vertices)
+importFrom(igraph,dfs)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_edgelist)
 importFrom(igraph,neighbors)
